code-review(Phase3): add per-user limit comment in extraction, use .toList() in ExtractionController